Otimizações na camada de persistência