@@ -5,9 +5,7 @@ import br.com.alura.adopet.api.repository.PetRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PetService {
@@ -23,7 +21,7 @@ public class PetService {
         List<Pet> pets = repository.findAll();
         return pets.stream()
                 .filter(pet -> !pet.getAdotado())
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
